  - Enhancement  #300 Different Fanart for different tv seasons
  - Enhancement  #301 Episode plots made available in the xsl file
  - Fixed defect #302 Library path need to be standardised in the code, will now add a trailing "/" if needed
  - Fixed defect #303 Divider and spacer does not show up on the popcorn.
  - Fixed defect #304 When there is no full summary on IMDB the plot is set to NONE.
  - Fixed defect #324 File name in title instead of movie name
  - Fixed defect #325 Special Chars at beginning of Movie Name should not mess up Sort Order
  - Enhancement  #328 Enable or Disable reading metadata from media files (Issue 148)
  - Fixed defect #329 thetvdb.com id in NFO files
  - Fixed defect #330 Genres collapsed too much
  - Enhancement  #335 ability to override fanart using the NFO xml file
  - Fixed defect #340 NullPointerException handling dummy thumbnail
  - Fixed defect #344 MovieJukebox doesn't use poster file in movie folder
  - Fixed defect #345 No plot summary
  - Fixed defect #347 Media Info displayed is inaccurate
  - Added new YAMJ logo to gfb107 skins

MovieJukebox 1.0.13 beta
------------------------
  - Enhancement   #59 Use TheTVDB.com to look up TV series information
  - Enhancement   #76 Addition of a TV logo to TV Series
  - Enhancement   #86 Search NFO directory for nfo files as well
  - Enhancement  #101 Allow NFO file to override information from scanner
  - Fixed defect #119 Automatic clean up deleted movies (Use command line argument "-c")
  - Enhancement  #151 Season indicator on SD and Default skins for TV Series
  - Enhancement  #160 Vertical scroll
  - Fixed defect #190 TV Series / Season sorting incorectly
  - Enhancement  #194 Configurable number of days for "New" Category. 0 (Zero) will disable new category.
  - Fixed defect #200 Semi-colon in dir/file name breaks image/page link
  - Fixed defect #202 scanner.skip.keywords problems